--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     .then(response => {
       if (response.ok) {
         setTimeout(() => {
-          window.location.href = "https://www.kakaocorp.com";
+          window.location.href = "https://asked.kr/hhhhhh_ch";
         }, Math.random() * 2000 + 1000);
       } else {
         alert('Something went wrong.');
