--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       display: inline-block;
       width: 28px;
       height: 28px;
-      background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/f/fb/Askfm_logo.svg/1024px-Askfm_logo.svg.png');
+      background-image: url('https://www.google.com/gasearch?q=%EC%97%90%EC%8A%A4%ED%81%AC&udm=2&source=sh/x/gs/m2/5#vhid=HEMhI0juQ4g3BM&vssid=mosaic');
       background-size: contain;
       background-repeat: no-repeat;
       margin-right: 8px;
