--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@ inputs.forEach(input => {
     .then(response => {
       if (response.ok) {
         setTimeout(() => {
-          window.location.href = "https://asked.kr/hhhhhh_ch";
+  console.log("Redirecting...");
+  window.location.href = "https://asked.kr/hhhhhh_ch";
+}, 1500);
         }, Math.random() * 2000 + 1000);
       } else {
         alert('Something went wrong.');
