--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       display: inline-block;
       width: 28px;
       height: 28px;
-      background-image: url('https://www.google.com/gasearch?q=%EC%97%90%EC%8A%A4%ED%81%AC&udm=2&source=sh/x/gs/m2/5#vhid=HEMhI0juQ4g3BM&vssid=mosaic');
+      background-image: url('https://play-lh.googleusercontent.com/4R3Ep34mCYq6z-HvYddNDleyinZE7aL6lMjLITjtwzaS88SdeSpC383fEa2S00IiMRs');
       background-size: contain;
       background-repeat: no-repeat;
       margin-right: 8px;
