--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       display: inline-block;
       width: 28px;
       height: 28px;
-      background-image: url('https://play-lh.googleusercontent.com/4R3Ep34mCYq6z-HvYddNDleyinZE7aL6lMjLITjtwzaS88SdeSpC383fEa2S00IiMRs');
+      background-image: url('https://img.sur.ly/favicons/a/asked.kr.ico');
       background-size: contain;
       background-repeat: no-repeat;
       margin-right: 8px;
